2003-02-13  Bastien Nocera  <hadess@hadess.net>

	* modules/ssh-method.c: (ssh_connect), (do_open_directory): don't crash
	when accessing ssh://, nicer error message when we get a connection
	refused

2003-02-13  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* modules/ssh-method.c: (ssh_connect), (ssh_destroy),
	(ssh_check_for_done), (do_read), (do_read_directory):
	add more robust error checking, check for EOF and EOD when we're done
	reading rather than on close

==== gnome-vfs 2.2.2 ====
	
2003-02-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 
	Bump to 2.2.2
	
2003-02-12  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-ops.c (gnome_vfs_monitor_add):
	Free uri if no monitor_add implementation. Plugs leak.

	* libgnomevfs/gnome-vfs-monitor.c (_gnome_vfs_monitor_do_cancel):
	Correctly destroy the handle of result == OK. Plugs leak.

2003-02-12  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* modules/Makefile.am:
	* modules/ssh-method.c: (ssh_connect), (ssh_read_error),
	(ssh_wait_and_destroy), (do_open), (do_close), (do_read),
	(do_make_directory), (do_remove_directory), (do_unlink),
	(do_check_same_fs), (do_set_file_info): give a login failed error when
	no key is setup to access the machine, a server not available when the
	machine doesn't have its keys in the known_hosts, use port information
	from the URI, redirect ssh:/// to ssh://localhost/, wait 30 secs for ssh        to finish before killing it (fixes the data loss problem when copying
	files to a remote location), check for cancellation when ssh takes
	to much time to finish, implement do_check_same_fs (disabled until
	move is implemented)

2003-02-10  Christophe Fergeau  <teuf@users.sourceforge.net>

	* modules/file-method.c: disabled the annoying "FAMOpen failed..."
	warning

==== gnome-vfs 2.2.1 ====
	
2003-02-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 